// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pipeline_own_line.js [espree] format 1`] = `
"Unexpected token > (4:3)
  2 | 	0
  3 | 	// Comment
> 4 | 	|> x
    | 	 ^
  5 | }
  6 |
  7 | bifornCringerMoshedPerplexSawder("
`;

exports[`pipeline_own_line.js [meriyah] format 1`] = `
"[4:3]: Unexpected token: '>' (4:3)
  2 | 	0
  3 | 	// Comment
> 4 | 	|> x
    | 	 ^
  5 | }
  6 |
  7 | bifornCringerMoshedPerplexSawder("
`;

exports[`pipeline_own_line.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
function pipeline() {
	0
	// Comment
	|> x
}

bifornCringerMoshedPerplexSawder(
  askTrovenaBeenaDependsRowans,
  glimseGlyphsHazardNoopsTieTie,
  averredBathersBoxroomBuggyNurl
) // comment
|> kochabCooieGameOnOboleUnweave
|> glimseGlyphsHazardNoopsTieTie;

bifornCringerMoshedPerplexSawder(
  askTrovenaBeenaDependsRowans,
  glimseGlyphsHazardNoopsTieTie
)
|> foo // comment
|> kochabCooieGameOnOboleUnweave
|> glimseGlyphsHazardNoopsTieTie;

bifornCringerMoshedPerplexSawder[
  askTrovenaBeenaDependsRowans +
  glimseGlyphsHazardNoopsTieTie +
  averredBathersBoxroomBuggyNurl
] // comment
|> kochabCooieGameOnOboleUnweave
|> glimseGlyphsHazardNoopsTieTie;

bifornCringerMoshedPerplexSawder[
  askTrovenaBeenaDependsRowans +
  glimseGlyphsHazardNoopsTieTie +
  averredBathersBoxroomBuggyNurl
]
|> foo // comment
|> kochabCooieGameOnOboleUnweave
|> glimseGlyphsHazardNoopsTieTie;

=====================================output=====================================
function pipeline() {
  0 |>
    // Comment
    x;
}

bifornCringerMoshedPerplexSawder(
  askTrovenaBeenaDependsRowans,
  glimseGlyphsHazardNoopsTieTie,
  averredBathersBoxroomBuggyNurl
) // comment
  |> kochabCooieGameOnOboleUnweave
  |> glimseGlyphsHazardNoopsTieTie;

bifornCringerMoshedPerplexSawder(
  askTrovenaBeenaDependsRowans,
  glimseGlyphsHazardNoopsTieTie
)
  |> foo // comment
  |> kochabCooieGameOnOboleUnweave
  |> glimseGlyphsHazardNoopsTieTie;

bifornCringerMoshedPerplexSawder[
  askTrovenaBeenaDependsRowans +
    glimseGlyphsHazardNoopsTieTie +
    averredBathersBoxroomBuggyNurl
] // comment
  |> kochabCooieGameOnOboleUnweave
  |> glimseGlyphsHazardNoopsTieTie;

bifornCringerMoshedPerplexSawder[
  askTrovenaBeenaDependsRowans +
    glimseGlyphsHazardNoopsTieTie +
    averredBathersBoxroomBuggyNurl
]
  |> foo // comment
  |> kochabCooieGameOnOboleUnweave
  |> glimseGlyphsHazardNoopsTieTie;

================================================================================
`;
